aligned img and text horizontally on about age, corrected xontact info

--- a/styles/main.css
+++ b/styles/main.css
@@ -316,75 +316,56 @@ body {
 	height: 1000px;
   background-color: #444442;
 }
-/*.box-design {
-  height: 800px;
-  background: #444442;
-  position: relative;
-}
-.box {
-  background: #444442;
-  position: absolute;
-}
-.box-1 {
-  top: -100px;
-  left: 10px;
-}
-.box-2 {
-  top: -45px;
-  left: 55px;
-  z-index: 3;
-}*/
 .heading-about {
 	font-family: 'Gruppo', cursive;
 	color: #A19996;
 	font-size: 65px;
 	letter-spacing: 3px;
-	text-align: center;
 	z-index: 3;
   position: relative;
   top: 13%;
+  left: 55%;
 }
 .container {
     position: relative;
 		height: auto;
 		width: 100%;
+    left: -8%;
+    top: -11.5%;
 }
 img#portrait {
-  position: relative;
-  top: 15%;
-	left: -9%;
 	float: left;
-	width: 55%;
+	width: 50%;
 	height: 55%;
 }
 .about-blurb {
-  height: 200px;
-  width: 650px;
+  height: 600px;
+  width: 730px;
   overflow: visible;
   float: right;
-  /*border: 1px solid gray;*/
-  padding: 8px;
-  display: inline-block;
-  margin-top: -100px;
+  padding: 5px;
+  position: relative;
+  top: -50%;
+  right; 9%;
+
 }
 .about-blurb p {
   font-family: 'Gruppo', cursive;
 	font-size: 18px;
   color: #A19996;
-  word-spacing: 1px;
   line-height: 25px;
   text-indent: 50px;
   text-align: justify;
-  /*position: relative;
-  top: 0;
-  right: 0;*/
-
+  margin-right: 10px;
+  clear: left;
 }
 #about-heading {
   font-family: 'Gruppo', cursive;
-  font-size: 22px;
+  font-size: 24px;
   color: #A19996;
   text-align: center;
+  margin-top: 10px;
+  margin-right: 30px;
 }
 /**************************
 page3
@@ -400,6 +381,8 @@ page3
 	letter-spacing: 3px;
 	margin: auto 0;
 	text-align: center;
+  position: relative;
+  left: 30%;
 }
 h2.contact-info {
 	font-family: 'Open Sans', sans-serif;
@@ -407,6 +390,8 @@ h2.contact-info {
 	font-size: 25px;
 	color: #300F24;
 	text-align: center;
+  position: relative;
+  left: 30%;
 }
 .contact-links a {
 	text-align: center;
@@ -416,6 +401,8 @@ h2.contact-info {
 	font-size: 22px;
 	color: rgb(48, 15, 36);
 	text-decoration: none;
+  position: relative;
+  left: 30%;
 }
 a.contact-links:hover {
 	color: rgba(48, 15, 36, .5);
